--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
             <a href="#"><h1>Feedr</h1></a>
             <nav>
               <ul>
-                <li><a href="#">News Source: <span>Source Name</span></a>
+                <li><a href="#">News Source: <span>SELECT ONE</span></a>
                   <ul>
-                      <li><a href="#">Source 1</a></li>
-                      <li><a href="#">Source 2</a></li>
-                      <li><a href="#">Source 3</a></li>
+                      <!--
+                      <li><a href="#">1</a></li>
+                      <li><a href="#">2</a></li>
+                      <li><a href="#">3</a></li>
+                      -->
                   </ul>
                 </li>
               </ul>
@@ -50,6 +52,7 @@
           </div>
         </div>
         <section id="main" class="container">
+          <!-- 
           <article class="article">
             <section class="featuredImage">
               <img src="images/article_placeholder_1.jpg" alt="" />
@@ -102,6 +105,7 @@
             </section>
             <div class="clearfix"></div>
           </article>
+          -->
         </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
